# kPers

./: CMakeLists.txt  OneRead.paf  README.md  install.sh  kPers.cpp
inc/: utils.hpp
scripts/: ConvertBlasrToPaf.py  convertAndSort.sh  prepareRawLongReads.py  sortPaf.sh
src/: kPers.cpp  utils.cpp
